--- a/hw1/index.html
+++ b/hw1/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div class="top_section">
-        <div class="album_title">Digital Album</div>
+        <div class="col-md-12 album_title">Digital Album</div>
     </div>
     <div class="photo_section">
         <div class="view_box">
