--- a/hw1/index.html
+++ b/hw1/index.html
@@ -16,28 +16,28 @@
         <div class="col-md-3">
             <div class="photo_section_2">
                 <div class="view_box">
-                    <img src="starburst.jpg" class="image_fitting">
+                    <img src="mmo.jfif" class="image_fitting">
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="photo_section_2">
                 <div class="view_box">
-                    <img src="starburst.jpg" class="image_fitting">
+                    <img src="uso.jpg" class="image_fitting">
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="photo_section_2">
                 <div class="view_box">
-                    <img src="starburst.jpg" class="image_fitting">
+                    <img src="starburst2.jfif" class="image_fitting">
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="photo_section_2">
                 <div class="view_box">
-                    <img src="starburst.jpg" class="image_fitting">
+                    <img src="ten.jfif" class="image_fitting">
                 </div>
             </div>
         </div>
