--- a/hw1/index.html
+++ b/hw1/index.html
@@ -15,28 +15,28 @@
     <div class="row">
         <div class="col-md-3">
             <div class="photo_section_2">
-                <div class="view_box">
+                <div class="view_box_2">
                     <img src="mmo.jfif" class="image_fitting">
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="photo_section_2">
-                <div class="view_box">
+                <div class="view_box_2">
                     <img src="uso.jpg" class="image_fitting">
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="photo_section_2">
-                <div class="view_box">
+                <div class="view_box_2">
                     <img src="starburst2.jfif" class="image_fitting">
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="photo_section_2">
-                <div class="view_box">
+                <div class="view_box_2">
                     <img src="ten.jfif" class="image_fitting">
                 </div>
             </div>
