--- a/hw1/index.html
+++ b/hw1/index.html
@@ -16,7 +16,7 @@
         <div class="col-md-3">
             <div class="photo_section_2">
                 <div class="view_box_2">
-                    <img src="mmo.jfif" class="image_fitting">
+                    <img src="starburst.jpg".jfif" class="image_fitting">
                 </div>
             </div>
         </div>
