--- a/hw1/index.html
+++ b/hw1/index.html
@@ -5,6 +5,13 @@
 </head>
 <body>
     <div class="top_section">
+        <img src="https://img.icons8.com/cotton/64/000000/menu.png" style="position: absolute;z-index: 10000;">
+        <div id="menu" class="album_menu">
+            <div class="selection_button"><div style="text-align: center;font-weight: 600;color: aliceblue;">相簿一</div></div>
+            <div class="selection_button"><div style="text-align: center;font-weight: 600;color: aliceblue;">相簿二</div></div>
+            <div class="selection_button"><div style="text-align: center;font-weight: 600;color: aliceblue;">相簿三</div></div>
+            <div class="selection_button"><div style="text-align: center;font-weight: 600;color: aliceblue;">相簿四</div></div>
+        </div>
         <div class="col-md-12 album_title">Digital Album</div>
     </div>
     <div class="photo_section">
