--- a/hw2/index.html
+++ b/hw2/index.html
@@ -6,31 +6,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Digital Photo Album</title>
   <link rel="stylesheet" type="text/css" media="screen" href="styles.css"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
   <script src="main.js"></script>
   <div class="top_section">
     <img src="https://img.icons8.com/cotton/64/000000/menu.png" style="position: absolute;z-index: 10000;" onclick="useMenu()"  class="text_button">
     <div id="menu" class="album_menu">
-        <div class="selection_button text_button" onclick="switchPage(0)"><div style="text-align: center;font-weight: 600;color: aliceblue;">相簿一</div></div>
-        <div class="selection_button text_button" onclick="switchPage(1)"><div style="text-align: center;font-weight: 600;color: aliceblue;">相簿二</div></div>
-        <div class="selection_button text_button" onclick="switchPage(2)"><div style="text-align: center;font-weight: 600;color: aliceblue;">相簿三</div></div>
-        <div class="selection_button text_button" onclick="switchPage(3)"><div style="text-align: center;font-weight: 600;color: aliceblue;">相簿四</div></div>
-        <div onclick="addAlbum()" class="text_button">新增相簿</div>
+        <div onclick="addAlbum()" class="text_button selection_button" style="font-family: 'Noto Sans TC', sans-serif;color: aliceblue;font-size: 0.5cm;vertical-align: middle;">新增相簿</div>
+        <div onclick="removeAlbum()" class="text_button selection_button" style="font-family: 'Noto Sans TC', sans-serif;color: aliceblue;font-size: 0.25cm;vertical-align: middle;">刪除最新新增相簿</div>
         <br><br>
-        <div onclick="removeAlbum()" class="text_button">刪除相簿</div>
+        <div class="selection_button text_button" onclick="switchPage(0)"><div id="albumText1" style="font-family: 'Noto Sans TC', sans-serif;text-align: center;font-weight: 600;color: aliceblue;font-size: 0.5cm;vertical-align:middle;">Album 1</div></div>
+        <div class="selection_button text_button" onclick="switchPage(1)"><div id="albumText2" style="font-family: 'Noto Sans TC', sans-serif;text-align: center;font-weight: 600;color: aliceblue;font-size: 0.5cm;vertical-align: middle;">Album 2</div></div>
     </div>
-    <div class="col-md-12 album_title">Digital Album</div>
+    <div class="col-md-12 album_title" style="font-family: 'Noto Sans TC', sans-serif;">Digital Album</div>
 </div>
 <div class="photo_section">
-    <div class="switch_button_left" onclick="switchPage(-1)" style="text-align:center">Previous page</div>
-    <div class="switch_button_right" onclick="switchPage(100)" style="text-align:center">Next page</div>
+    <div class="switch_button_left" onclick="switchPage(-1)" style="text-align:center;font-family: 'Noto Sans TC', sans-serif;padding-top: 5px;">Previous page</div>
+    <div class="switch_button_right" onclick="switchPage(100)" style="text-align:center;font-family: 'Noto Sans TC', sans-serif;padding-top: 5px;">Next page</div>
     <div class="view_box">
         <img id="large_img" src="starburst.jpg" class="image_fitting">
     </div>
 </div>
-<section id="previewSection">
-    <div class="row" id="row0" style="overflow-x:hidden; overflow-y: auto;">
+<section id="previewSection" style="overflow-y: auto; height: 240px;">
+    <div class="row" id="row0">
         <div class="col-md-3" style="display: block;">
             <div class="photo_section_2">
                 <div class="view_box_2">
@@ -61,13 +62,13 @@
         </div>
     </div>
 </section>
-<div class="row top_section album_title" style="font-size:1cm;">
-    <div onclick="addPhoto(currentPhotoNum())" class="text_button">新增相片</div>
-    <div style="margin: auto;">Total photo:<span id="totalPhoto">-999</span> / Current photo:<span id="currentPhoto">-999</span> / Current selecting:<span id="currentSelecting">-999</span></div>
-    <div onclick="removePhoto()" class="text_button">刪除相片</div>
+<div class="row top_section album_title">
+    <div onclick="addPhoto(currentPhotoNum())" class="text_button" style="font-family: 'Noto Sans TC', sans-serif;font-size: 1cm;padding-left: 5%;">新增相片</div>
+    <div style="margin: auto;font-family: 'Noto Sans TC', sans-serif;font-size: 0.6cm;">Total photo:<span id="totalPhoto">-999</span> / Current photo:<span id="currentPhoto">-999</span> / Current selecting:<span id="currentSelecting">-999</span></div>
+    <div onclick="removePhoto()" class="text_button" style="font-family: 'Noto Sans TC', sans-serif;font-size: 1cm;padding-right: 5%;">刪除相片</div>
 </div>
 <div class="row top_section album_title">
-    <div style="margin: auto;">Album No.<span id="nowPage">-999</span>/<span id="totalPage">-999</span></div>
+    <div style="margin: auto;font-family: 'Noto Sans TC', sans-serif;">Album No.<span id="nowPage">-999</span>/<span id="totalPage">-999</span></div>
     <div></div>
 </div>
 <script>getPage();loadImage(0);showPhotoNum();showCurrentSelecting(1);</script>
